<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home_page"
        android:id="@+id/home_page_nav"
        android:icon="@drawable/ic_home_black_24dp">
    </item>
    <item android:title="@string/team"
        android:id="@+id/team_page_nav"
        android:icon="@drawable/ic_team_black_24dp">
    </item>
    <item android:title="@string/events"
        android:id="@+id/events_page_nav"
        android:icon="@drawable/ic_event_black_24dp">
    </item>
    <item android:title="@string/book_tickets"
        android:id="@+id/book_tickets_nav"
        android:icon="@drawable/ic_add_circle_outline_black_24dp">
    </item>
    <item android:title="@string/contact_us"
        android:id="@+id/contact_page_nav"
        android:icon="@drawable/ic_contacts_black_24dp">
    </item>
    <item android:title="@string/log_out"
        android:id="@+id/log_out_nav"
        android:icon="@drawable/ic_power_settings_new_black_24dp">
    </item>
    <item android:title="@string/login"
        android:id="@+id/sign_in_nav"
        android:icon="@drawable/ic_person_black_24dp">
    </item>
</menu>