<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookTicketsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Spinner
                    android:id="@+id/select_event_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"/>

                <TextView
                    android:id="@+id/membersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/memb1InputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enter_the_name"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/memb1EditText"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mem1ContactInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enter_contact_number"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/memb1ContactEditText"
                        android:inputType="numberSigned"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/collegeInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enter_your_college"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/collegeEditText"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textViewPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:text="@string/sorry_for_the_inconvinience"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textSize="14sp"/>

                <Button
                    android:id="@+id/tickets_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="48dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/book_tickets"/>

                <Button
                    android:id="@+id/tickets_another_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="48dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/book_another_ticket"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/toolbarColor"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/other_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/loading_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:contentDescription="@string/loading_screen"
            android:cropToPadding="true"
            android:src="@drawable/avd_anim_loading" />

        <ImageView
            android:id="@+id/transaction_success_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="#fff"
            android:contentDescription="@string/transaction_successfull"
            android:cropToPadding="true"
            android:src="@drawable/transaction_successful_anim" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>