<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_desc_textview"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/simonetta"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/simonetta"
                android:text="@string/guests"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/guests_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"/>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/simonetta"
                android:text="@string/sponsored_by"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sponsors_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"/>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fb_name_iv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/fb_icon"
                    android:onClick="iClicked"
                    android:tag="fb"
                    android:layout_gravity="center"
                    android:contentDescription="@string/facebook"
                    />

                <TextView
                    android:id="@+id/fbLink"
                    android:layout_toEndOf="@id/fb_name_iv"
                    android:onClick="iClicked"
                    android:tag="fb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_us_on_facebook"
                    android:layout_marginTop="15dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:fontFamily="@font/simonetta"
                    android:textSize="20sp"
                    />

                <ImageView
                    android:id="@+id/insta_name_iv"
                    android:layout_below="@+id/fb_name_iv"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/insta_icon"
                    android:onClick="iClicked"
                    android:tag="insta"
                    android:layout_gravity="center"
                    android:contentDescription="@string/facebook"
                    />

                <TextView
                    android:layout_toEndOf="@id/insta_name_iv"
                    android:layout_below="@id/fbLink"
                    android:onClick="iClicked"
                    android:tag="insta"
                    android:id="@+id/instaLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/follow_us_on_instagram"
                    android:layout_marginTop="12dp"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:fontFamily="@font/simonetta"
                    android:textSize="20sp"
                    />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/toolbarColor"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/toolbarColor"
                app:scrimAnimationDuration="300">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:src="@drawable/avd_anim_loading"
                    android:contentDescription="@string/milagro_image"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/loading_screen"
        android:background="#fff"
        android:contentDescription="@string/loading_screen"
        android:src="@drawable/avd_anim_loading"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cropToPadding="true"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/main_nav_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_layout"
        />

</androidx.drawerlayout.widget.DrawerLayout>