<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/events_desc_textview"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/simonetta"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/simonetta"
                    android:text="@string/events"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/events_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:backgroundTint="@color/colorAccent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/toolbarColor"
                app:scrimAnimationDuration="300">

                <ImageView
                    android:id="@+id/events_main_image"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/milagro_image"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    android:src="@drawable/avd_anim_loading"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/not_main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/loading_screen"
            android:background="#fff"
            android:contentDescription="@string/loading_screen"
            android:src="@drawable/avd_anim_loading"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="true"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>